--- a/immichFrame.Web/package.json
+++ b/immichFrame.Web/package.json
@@ -14,35 +14,31 @@
 	},
 	"devDependencies": {
 		"@castlenine/svelte-qrcode": "^2.3.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@mdi/js": "^7.4.47",
 		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.8.4",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@sveltejs/kit": "^2.46.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
+		"date-fns": "^4.1.0",
 		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.45.1",
-		"globals": "^15.0.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.12.4",
+		"globals": "^16.4.0",
+		"oazapfts": "^6.1.0",
+		"openapi-fetch": "^0.14.1",
 		"openapi-typescript": "^7.3.3",
 		"postcss": "^8.4.44",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^5.0.0",
+		"svelte": "^5.39.11",
 		"svelte-check": "^4.0.0",
 		"svelte-confetti": "^2.0.0",
 		"tailwindcss": "^3.4.10",
+		"thumbhash": "^0.1.1",
 		"typescript": "^5.5.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.4.11"
+		"vite": "^7.1.9"
 	},
-	"type": "module",
-	"dependencies": {
-		"@mdi/js": "^7.4.47",
-		"@sveltejs/adapter-node": "^5.2.2",
-		"date-fns": "^4.1.0",
-		"oazapfts": "^6.1.0",
-		"openapi-fetch": "^0.12.0",
-		"thumbhash": "^0.1.1"
-	}
+	"type": "module"
 }
