--- a/docker/Settings.example.json
+++ b/docker/Settings.example.json
@@ -39,7 +39,8 @@
   "Accounts": [
     {
       "ImmichServerUrl": "REQUIRED",
-      "ApiKey": "REQUIRED",
+      "ApiKey": "super-secret-api-key",
+      "ApiKeyFile": "/path/to/api.key",
       "ImagesFromDate": null,
       "ShowMemories": false,
       "ShowFavorites": false,
