--- a/docker/example.env
+++ b/docker/example.env
@@ -1,5 +1,9 @@
 ImmichServerUrl=URL
+
+# Either ApiKey or ApiKeyFile must be specified.
 ApiKey=KEY
+# ApiKeyFile=/path/to/key
+
 # AuthenticationSecret=
 # Interval=10
 # TransitionDuration=2
