--- a/ImmichFrame.WebApi/ImmichFrame.WebApi.csproj
+++ b/ImmichFrame.WebApi/ImmichFrame.WebApi.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <SpaRoot>..\immichFrame.Web</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev -- --host</SpaProxyLaunchCommand>
@@ -11,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.20" />
-    <PackageReference Include="YamlDotNet" Version="16.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" />
+    <PackageReference Include="YamlDotNet" />
   </ItemGroup>
 
   <ItemGroup>
