--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -17,15 +17,7 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <PackageVersion Include="NSwag.ApiDescription.Client" Version="14.6.3" />
-=======
-    <PackageVersion Include="NSwag.ApiDescription.Client" Version="13.20.0" />
->>>>>>> b71ad49 (Update calendar (#7))
-=======
-    <PackageVersion Include="NSwag.ApiDescription.Client" Version="13.20.0" />
->>>>>>> b71ad498a4829c4ac84ffeabf652a33c9f403264
+    <PackageVersion Include="NSwag.ApiDescription.Client" Version="14.6.3" />>
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit.Analyzers" Version="4.10.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.2.0" />
@@ -34,12 +26,4 @@
     <PackageVersion Include="ThumbHash" Version="2.1.1" />
     <PackageVersion Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
-<<<<<<< HEAD
-<<<<<<< HEAD
 </Project>
-=======
-</Project>
->>>>>>> b71ad49 (Update calendar (#7))
-=======
-</Project>
->>>>>>> b71ad498a4829c4ac84ffeabf652a33c9f403264
